--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,12 @@
 
 @font-face {
     font-family: 'Agustina';
-    src: url('/assets/fonts/Agustina.woff') format('woff');
+    src: url('./assets/fonts/Agustina.woff') format('woff');
 }
 
 @font-face {
     font-family: 'Dancing Script';
-    src: url('/assets/fonts/DancingScript-Medium.ttf') format('truetype');
+    src: url('./assets/fonts/DancingScript-Medium.ttf') format('truetype');
 }
 
 
@@ -55,7 +55,7 @@ a:hover{
     left: 0;
     width: 100%;
     height: 100%;
-    background: #000 url(/assets/images/dark-bg.webp) 50% no-repeat;
+    background: #000 url(./assets/images/dark-bg.webp) 50% no-repeat;
     background-size: cover;
     filter: brightness(50%);
     -webkit-filter: brightness(50%);
@@ -86,7 +86,7 @@ a:hover{
     left: 0;
     width: 100%;
     height: 100%;
-    background: #fff url(/assets/images/light-bg.webp) 50% no-repeat;
+    background: #fff url(./assets/images/light-bg.webp) 50% no-repeat;
     background-size: cover;
     filter: brightness(90%);
     -webkit-filter: brightness(90%);
@@ -434,7 +434,7 @@ body.noscroll {
     background-size: contain;
     background-position: bottom;
     background-repeat: no-repeat;
-    background-image: url(/assets/images/portraitcopy.png);
+    background-image: url(./assets/images/portraitcopy.png);
 }
 
 @media (max-width: 576px) {
@@ -462,7 +462,7 @@ body.noscroll {
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        background-image: url(/assets/images/NSR1.png);
+        background-image: url(./assets/images/NSR1.png);
 
     }
 
@@ -496,7 +496,7 @@ body.noscroll {
 
 #things-i-love {
     padding: 90px 0px;
-    background-image: url(/assets/images/grid.png);
+    background-image: url(./assets/images/grid.png);
     background-size: contain;
     min-height: 100vh;
 }
@@ -550,7 +550,7 @@ body.noscroll {
 --------------------------------------------------------------*/
 #about{
     padding: 100px 0px;
-    background-image: url(/assets/images/grid.png);
+    background-image: url(./assets/images/grid.png);
     background-size: contain;
     min-height: 100vh;
 }
@@ -670,7 +670,7 @@ body.noscroll {
 
 #tools{
     padding: 100px 0px 80px 0px;
-    background-image: url(/assets/images/grid.png);
+    background-image: url(./assets/images/grid.png);
     background-size: contain;
     min-height: 100vh;
 }
@@ -715,7 +715,7 @@ body.noscroll {
 #projects{
     padding: 100px 0px 80px 0px;
     min-height: 100vh;
-    background-image: url(/assets/images/grid.png);
+    background-image: url(./assets/images/grid.png);
     background-size: contain;
 }
 
@@ -832,7 +832,7 @@ body.noscroll {
 #testimonials {
     padding: 100px 0px;
     min-height: 100vh;
-    background-image: url(/assets/images/grid.png);
+    background-image: url(./assets/images/grid.png);
     background-size: contain;
 }
 
@@ -921,7 +921,7 @@ body.noscroll {
 #blogs{
     padding: 100px 0px;
     min-height: 100vh;
-    background-image: url(/assets/images/grid.png);
+    background-image: url(./assets/images/grid.png);
     background-size: contain;
 }
 
@@ -992,7 +992,7 @@ body.noscroll {
 #contact{
     padding: 100px 0;
     min-height: 100vh;
-    background-image: url(/assets/images/grid.png);
+    background-image: url(./assets/images/grid.png);
     background-size: contain;
 }
 
